--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcc 'F206'
 - !lcsh 'Shenandoah River Valley (Va. and W. Va.) -- History'
 - !lcsh 'Shenandoah National Park (Va.)'
+- GITenberg
 title: Legends of the Skyline Drive and the Great Valley of Virginia
 url: http://www.gutenberg.org/ebooks/33018
